--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Тренинг быстрое чтение">
+  <meta name="description" content="Тренинг — Скорочтение экспресс-методом">
   <meta name="author" content="rownarts.com">
 
-  <title>Тренинг — Быстрое чтение</title>
+  <title>Тренинг — Скорочтение экспресс-методом</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -202,7 +202,7 @@
 
 
   <!-- Уникальность -->
-  <section class="padding">
+  <section id="uniq" class="padding">
     <div class="container">
       <div class="text-center ">
         <h1 class="display-4">Уникальность тренинга</h1><br />
@@ -225,7 +225,7 @@
   </section>
 
   <!-- Результаты -->
-  <section class="bg-light padding">
+  <section id="result" class="bg-light padding">
     <div class="container">
       <div class="text-center ">
         <h1 class="display-4">Результаты</h1><br />
@@ -248,7 +248,7 @@
 
 
   <!-- Оставить заявку -->
-  <section class="showcase">
+  <section id="register" class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
@@ -291,7 +291,7 @@
 
 
   <!-- Стоимость -->
-  <section class="price bg-light text-center padding">
+  <section id="price" class="price bg-light text-center padding">
     <div class="container">
       <div class="col-lg-12">
         <h1 class="display-3">Стоимость 14&nbsp;000&nbsp;₽</h1>
@@ -304,7 +304,7 @@
 
 
   <!-- 6 Программа тренинга -->
-  <section class="program padding">
+  <section id="schedule" class="program padding">
     <div class="container">
       <div class="text-center">
         <h1 class="display-4">Программа тренинга</h1>
@@ -423,14 +423,11 @@
 
 
   <!-- 7 Формат тренинга + ФОТО -->
-  <section class="bg-light padding">
+  <section id="subject" class="bg-light padding">
     <div class="container">
       <div class="text-center">
         <h1 class="display-4">Формат тренинга</h1>
-      </div>
-
-      <br />
-
+      </div><br />
       <div>
         <p>
           <ul>
@@ -444,92 +441,85 @@
           </ul>
         </p> <br />
       </div>
-      <!-- /container -->
+    </div>
+    <!-- /container -->
 
 
-      <!-- 7 Фото -->
-      <div class="container">
+    <!-- 7 Фото -->
+    <div class="container">
 
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="row text-center text-lg-left">
-                <div class="row">
-                  <div class="col-3 col-md-3">
-                    <a href="#" class="d-block h-100">
-                      <img class="img-fluid img-thumbnail" src="img/photos/1.JPG" alt="">
-                    </a>
-                  </div>
-                  <div class="col-3 col-md-3">
-                    <a href="#" class="d-block h-100">
-                      <img class="img-fluid img-thumbnail" src="img/photos/2.JPG" alt="">
-                    </a>
-                  </div>
-                  <div class="col-3 col-md-3">
-                    <a href="#" class="d-block h-100">
-                      <img class="img-fluid img-thumbnail" src="img/photos/3.JPG" alt="">
-                    </a>
-                  </div>
-                  <div class="col-3 col-md-3">
-                    <a href="#" class="d-block h-100">
-                      <img class="img-fluid img-thumbnail" src="img/photos/4.JPG" alt="">
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="row text-center text-lg-left">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row text-center text-lg-left">
+              <div class="row">
                 <div class="col-3 col-md-3">
                   <a href="#" class="d-block h-100">
-                    <img class="img-fluid img-thumbnail" src="img/photos/5.JPG" alt="">
+                    <img class="img-fluid img-thumbnail" src="img/photos/1.JPG" alt="">
                   </a>
                 </div>
                 <div class="col-3 col-md-3">
                   <a href="#" class="d-block h-100">
-                    <img class="img-fluid img-thumbnail" src="img/photos/6.JPG" alt="">
+                    <img class="img-fluid img-thumbnail" src="img/photos/2.JPG" alt="">
                   </a>
                 </div>
                 <div class="col-3 col-md-3">
                   <a href="#" class="d-block h-100">
-                    <img class="img-fluid img-thumbnail" src="img/photos/7.JPG" alt="">
+                    <img class="img-fluid img-thumbnail" src="img/photos/3.JPG" alt="">
                   </a>
                 </div>
                 <div class="col-3 col-md-3">
                   <a href="#" class="d-block h-100">
-                    <img class="img-fluid img-thumbnail" src="img/photos/8.JPG" alt="">
+                    <img class="img-fluid img-thumbnail" src="img/photos/4.JPG" alt="">
                   </a>
                 </div>
               </div>
             </div>
-
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Перд.</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">След.</span>
-          </a>
+          <div class="carousel-item">
+            <div class="row text-center text-lg-left">
+              <div class="col-3 col-md-3">
+                <a href="#" class="d-block h-100">
+                  <img class="img-fluid img-thumbnail" src="img/photos/5.JPG" alt="">
+                </a>
+              </div>
+              <div class="col-3 col-md-3">
+                <a href="#" class="d-block h-100">
+                  <img class="img-fluid img-thumbnail" src="img/photos/6.JPG" alt="">
+                </a>
+              </div>
+              <div class="col-3 col-md-3">
+                <a href="#" class="d-block h-100">
+                  <img class="img-fluid img-thumbnail" src="img/photos/7.JPG" alt="">
+                </a>
+              </div>
+              <div class="col-3 col-md-3">
+                <a href="#" class="d-block h-100">
+                  <img class="img-fluid img-thumbnail" src="img/photos/8.JPG" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+
         </div>
-
-
-
-
-
-
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Перд.</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">След.</span>
+        </a>
       </div>
-      <!-- /.container -->
-
-
+    </div>
+    <!-- /.container -->
   </section>
 
 
 
 
   <!-- ВИДЕО Легендарный -->
-  <section class="text-center padding">
+  <section id="video" class="text-center padding">
     <div class="container">
       <p class="lead mb-1">
         <h1 class="display-4">О тренинге</h1>
@@ -542,6 +532,7 @@
       </div>
       <br />
       <p>О тренинге, его создании и слушателях рассказывает автор методики Андрей Кениг</p>
+    </div>
   </section>
 
 
@@ -603,108 +594,105 @@
 
 
 
-  <!-- 8 Отзывы ВИДЕО -->
-  <section class="padding">
+  <!-- 8 Отзывы ВИДЕО ОТЗЫВЫ -->
+  <section id="video-comments" class="padding">
     <div class="container">
-      <div class="text-center ">
+      <div class="text-center">
         <h1 class="display-4">Отзывы</h1><br />
       </div>
-      <div>
-        <div id="carouselOrziviControls" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
+      <div id="carouselOrziviControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
 
-            <div class="carousel-item active">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_2z7dQUSKRg" frameborder="0"
-                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
+          <div class="carousel-item active">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_2z7dQUSKRg" frameborder="0"
+                allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <!-- /carousel-item -->
-
-            <div class="carousel-item">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Lm9VFqFCF0Q" frameborder="0"
-                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-            <!-- /carousel-item -->
-
-            <div class="carousel-item">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cB02gUHvw3s" frameborder="0"
-                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-            <!-- /carousel-item -->
-
-            <div class="carousel-item">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LjdUSbNKn2g" frameborder="0"
-                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-            <!-- /carousel-item -->
-
-            <div class="carousel-item">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/t0TG5Raezbs" frameborder="0"
-                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-            <!-- /carousel-item -->
-
-            <div class="carousel-item">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/GDakPKnVz1c" frameborder="0"
-                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-            <!-- /carousel-item -->
-
-            <div class="carousel-item">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/eoe7gnXonWk" frameborder="0"
-                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-            <!-- /carousel-item -->
-
-            <div class="carousel-item">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QeeJadkjXMI" frameborder="0"
-                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-            <!-- /carousel-item -->
-            <div class="carousel-item">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JJtHC62h_Z8" frameborder="0"
-                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-            <!-- /carousel-item -->
-            <div class="carousel-item">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IV_7EF54RkA" frameborder="0"
-                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-            <!-- /carousel-item -->
-
-
-
-
           </div>
-          <a class="carousel-control-prev" href="#carouselOrziviControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselOrziviControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+          <!-- /carousel-item -->
+
+          <div class="carousel-item">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Lm9VFqFCF0Q" frameborder="0"
+                allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <!-- /carousel-item -->
+
+          <div class="carousel-item">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cB02gUHvw3s" frameborder="0"
+                allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <!-- /carousel-item -->
+
+          <div class="carousel-item">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LjdUSbNKn2g" frameborder="0"
+                allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <!-- /carousel-item -->
+
+          <div class="carousel-item">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/t0TG5Raezbs" frameborder="0"
+                allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <!-- /carousel-item -->
+
+          <div class="carousel-item">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/GDakPKnVz1c" frameborder="0"
+                allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <!-- /carousel-item -->
+
+          <div class="carousel-item">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/eoe7gnXonWk" frameborder="0"
+                allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <!-- /carousel-item -->
+
+          <div class="carousel-item">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QeeJadkjXMI" frameborder="0"
+                allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <!-- /carousel-item -->
+          <div class="carousel-item">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JJtHC62h_Z8" frameborder="0"
+                allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <!-- /carousel-item -->
+          <div class="carousel-item">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IV_7EF54RkA" frameborder="0"
+                allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <!-- /carousel-item -->
         </div>
+        <a class="carousel-control-prev" href="#carouselOrziviControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselOrziviControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
+      <!-- /carousel -->
+
+    </div>
   </section>
 
 
@@ -731,6 +719,7 @@
         <p>Расписание открытых тренингов на 2019 год мы опубликуем в декабре 2019, </p>
         <p>по вопросам проведения тренинга в корпоративном формате обращайтесь к организаторам</p>
       </div>
+    </div>
   </section>
 
 
