--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
         </div>
       </div>
     </div>
-    <br />
+    <br /><br />
 
 
 
     <div class="container">
       <p class="h4">Вам к нам если…</p>
-      <p>
+      <div align="left">
         <ul>
           <li>читаете уже везде, на кухне, в душе, в ванной, в самолёте … и все равно не успеваете следить за всеми
             трендами </li>
@@ -195,7 +195,7 @@
           <li>закрыв книгу вы понимаете, что пока читали всё время думали о своём и ничего не запомнили. Приходится
             постоянно перечитывать?..</li>
         </ul>
-      </p>
+      </div>
     </div>
   </section>
 
