icons for topics

--- a/index.html
+++ b/index.html
@@ -220,22 +220,29 @@
   <!-- Уникальность -->
   <section id="uniq" class="padding">
     <div class="container">
-      <div class="text-center ">
+      <div class="text-center">
         <h1 class="display-4">Уникальность тренинга</h1><br />
       </div>
-      <div>
-        <ul>
-          <li>Экспресс-метод за 2 дня благодаря инструментам НЛП. Быстрое чтение БЫСТРО!</li>
-          <li>Авторская методика с реальных людей, развивших в себе этот навык</li>
-          <li>Лучшие практики на базе исследовательской мастерской. Многолетний опыт .... и отобраны только
-            реально
-            работающие упражнения</li>
-          <li>Сам тренинг максимально кайфовый по настроению и атмосфере, наполнению фото, видео, музыка</li>
-          <li>Работа не только с мозгом, но и с эмоциями и с телом — целостный
-            процесс</li>
-          <li>Побочные эффекты: развитие памяти и воображения</li>
-          <li>Посттренинговое сопровождение</li>
-        </ul>
+      <div class="row">
+        <div class="col-sm-12 col-md-3 m-auto text-center text-info">
+          <div class=" gi-8x">
+            <i class="far fa-gem"></i>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-9">
+          <ul>
+            <li>Экспресс-метод за 2 дня благодаря инструментам НЛП. Быстрое чтение БЫСТРО!</li>
+            <li>Авторская методика с реальных людей, развивших в себе этот навык</li>
+            <li>Лучшие практики на базе исследовательской мастерской. Многолетний опыт .... и отобраны только
+              реально
+              работающие упражнения</li>
+            <li>Сам тренинг максимально кайфовый по настроению и атмосфере, наполнению фото, видео, музыка</li>
+            <li>Работа не только с мозгом, но и с эмоциями и с телом — целостный
+              процесс</li>
+            <li>Побочные эффекты: развитие памяти и воображения</li>
+            <li>Посттренинговое сопровождение</li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
@@ -246,19 +253,29 @@
       <div class="text-center ">
         <h1 class="display-4">Результаты</h1><br />
       </div>
-      <div>
-        <li>За 2 дня скорость возрастёт в <nobr>2-3</nobr> раза (1500 — 6 000 знаков
-          в минуту)</li>
-        <li>У вас появится (или усилится) желание читать</li>
-        <li>Перестанете отвлекаться во время чтения</li>
-        <li>Вы сможете лучше понимать текст (на <nobr>80-100%</nobr> при скорочтении, в сравнении
-          с <nobr>40-60%</nobr>
-          при обычном чтении)</li>
-        <li>Появится свобода выбора: как читать — старой стратегией медленного чтения или принципиально новой
-          в зависимости от целей чтения и вида литературы</li>
-        <li>Узнаете и освоите инструменты, с помощью которых сможете ещё увеличить свою скорость
-          в дальнейшем</li>
+      <div class="row">
+        <div class="col-sm-12 col-md-3 m-auto text-center text-dark">
+          <div class=" gi-8x">
+            <i class="fas fa-graduation-cap"></i>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-9">
+          <ul>
+            <li>За 2 дня скорость возрастёт в <nobr>2-3</nobr> раза (1500 — 6 000 знаков
+              в минуту)</li>
+            <li>У вас появится (или усилится) желание читать</li>
+            <li>Перестанете отвлекаться во время чтения</li>
+            <li>Вы сможете лучше понимать текст (на <nobr>80-100%</nobr> при скорочтении, в сравнении
+              с <nobr>40-60%</nobr>
+              при обычном чтении)</li>
+            <li>Появится свобода выбора: как читать — старой стратегией медленного чтения или принципиально новой
+              в зависимости от целей чтения и вида литературы</li>
+            <li>Узнаете и освоите инструменты, с помощью которых сможете ещё увеличить свою скорость
+              в дальнейшем</li>
+          </ul>
+        </div>
       </div>
+    </div>
 
   </section>
 
