--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
           <form>
             <div class="form-row">
 
-              <div class="col-12 col-md-6">
+              <div class="col-12 col-md-6 mt-2">
                 <button type="submit" onclick="goToAnchor('register')" class="btn btn-block btn-lg btn-primary">Оставить
                   заявку!
                 </button>
               </div>
-              <div class="col-12 col-md-6">
+              <div class="col-12 col-md-6 mt-2">
                 <button type="submit" onclick="goToAnchor('ask-phone-call')" class="btn btn-block btn-lg btn-dark">Обратный
                   Звонок!</button>
               </div>
