Early reg offer removed + typos at org. data fixed.

--- a/index.html
+++ b/index.html
@@ -332,8 +332,7 @@
   <section id="price" class="price bg-light text-center padding">
     <div class="container">
       <div class="col-lg-12">
-        <h1 class="display-3">Стоимость 14&nbsp;000&nbsp;₽</h1>
-        <h1 class="display-4">При оплате до 20 ноября <span class="sale">12&nbsp;000&nbsp;₽</span></h1>
+        <h1 class="display-3">Стоимость участия: 14&nbsp;000&nbsp;₽</h1>
       </div>
   </section>
 
@@ -747,13 +746,13 @@
       </div>
       <div>
         <p><strong>Москва</strong></p>
-        <p>Тел +7 977 990 5640 (Сергей / Ирина)</p>
+        <p>Тел./WhatsApp +7 977 990 5640 (Сергей / Ирина)</p>
         <p><strong>Красноярск</strong></p>
-        <p>WatsApp +7 913 837 6167 (Татьяна)</p>
+        <p>WhatsApp +7 913 837 6167 (Татьяна)</p>
         <p><strong>Краснодар</strong></p>
-        <p>WatsApp +7 918 318 8335 (Татьяна)</p>
+        <p>WhatsApp +7 918 318 8335 (Татьяна)</p>
         <p><strong>Санкт-Петербург</strong></p>
-        <p>WatsApp +7 931 320 9606 (Анна)</p>
+        <p>WhatsApp +7 931 320 9606 (Анна)</p>
         <p>Расписание открытых тренингов на 2019 год мы опубликуем в декабре 2019, </p>
         <p>по вопросам проведения тренинга в корпоративном формате обращайтесь к организаторам</p>
       </div>
