--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="col-xl-12 mx-auto">
           <h1 class="display-1" style="font-weight: 500; font-size:2.8rem; padding-bottom: 30px ">Тренинг <br />"Скорочтение
             экспресс-методом"</h1>
-          <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">8-9 декабря, Москва</h1>
+          <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">16-17 марта 2019, Москва</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <br />
@@ -332,7 +332,14 @@
   <section id="price" class="price bg-light text-center padding">
     <div class="container">
       <div class="col-lg-12">
-        <h1 class="display-3">Стоимость участия: 14&nbsp;000&nbsp;₽</h1>
+        <h1 class="display-3">Стоимость</h1>
+        <h2 class="display-5">При оплате:</h2>
+        <h2 class="display-4">до 1 февраля — <span class="sale">12&nbsp;000&nbsp;₽</span></h2>
+        <h2 class="display-4">до 1 марта — <span class="sale">15&nbsp;000&nbsp;₽</span></h2>
+        <h2 class="display-4">после 1 марта — <span class="sale">18&nbsp;000&nbsp;₽</span></h2>
+        <!-- <h1 class="display-3">Стоимость участия: 18&nbsp;000&nbsp;₽</h1> -->
+        <br /><br />
+        <p>* Об условиях фиксирования ранней цены и дополнительных скидках уточняйте у <a href="#contacts">организаторов</a></p>
       </div>
   </section>
 
@@ -568,7 +575,7 @@
           allowfullscreen></iframe>
       </div>
       <br />
-      <p>О тренинге, его создании и слушателях рассказывает автор методики Андрей Кениг</p>
+      <p>О тренинге, его создании и слушателях рассказывает автор методики Андрей Кёниг</p>
     </div>
   </section>
 
@@ -747,14 +754,19 @@
       <div>
         <p><strong>Москва</strong></p>
         <p>Тел./WhatsApp +7 977 990 5640 (Сергей / Ирина)</p>
-        <p><strong>Красноярск</strong></p>
-        <p>WhatsApp +7 913 837 6167 (Татьяна)</p>
+        <p><strong>Санкт-Петербург</strong></p>
+        <p>Тел./WhatsApp +7 921 092 8950 (Анна)</p>
         <p><strong>Краснодар</strong></p>
         <p>WhatsApp +7 918 318 8335 (Татьяна)</p>
-        <p><strong>Санкт-Петербург</strong></p>
-        <p>WhatsApp +7 931 320 9606 (Анна)</p>
-        <p>Расписание открытых тренингов на 2019 год мы опубликуем в декабре 2019, </p>
-        <p>по вопросам проведения тренинга в корпоративном формате обращайтесь к организаторам</p>
+        <p><strong>Красноярск</strong></p>
+        <p>WhatsApp +7 913 837 6167 (Татьяна)</p>
+        <p><strong>Уфа</strong></p>
+        <p>WhatsApp +7 913 185 4331 (Татьяна)</p>
+
+        <br />
+        <p>Расписание открытых тренингов на 2019 год мы опубликуем в декабре 2019, <br />
+          по вопросам проведения тренинга в корпоративном формате обращайтесь к организаторам ближайшего к вам региона
+        </p>
       </div>
     </div>
   </section>
