open photos bit in new tab

--- a/index.html
+++ b/index.html
@@ -498,22 +498,22 @@
             <div class="row text-center text-lg-left">
               <div class="row">
                 <div class="col-3 col-md-3">
-                  <a href="#" class="d-block h-100">
+                  <a href="img/photos/1.JPG" target="_blank" class="d-block h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/1.JPG" alt="">
                   </a>
                 </div>
                 <div class="col-3 col-md-3">
-                  <a href="#" class="d-block h-100">
+                  <a href="img/photos/2.JPG" target="_blank" class="d-block h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/2.JPG" alt="">
                   </a>
                 </div>
                 <div class="col-3 col-md-3">
-                  <a href="#" class="d-block h-100">
+                  <a href="img/photos/3.JPG" target="_blank" class="d-block h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/3.JPG" alt="">
                   </a>
                 </div>
                 <div class="col-3 col-md-3">
-                  <a href="#" class="d-block h-100">
+                  <a href="img/photos/4.JPG" target="_blank" class="d-block h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/4.JPG" alt="">
                   </a>
                 </div>
