5-8 photos (link to jpg file)

--- a/index.html
+++ b/index.html
@@ -523,22 +523,22 @@
           <div class="carousel-item">
             <div class="row text-center text-lg-left">
               <div class="col-3 col-md-3">
-                <a href="#" class="d-block h-100">
+                <a href="img/photos/5.JPG" target="_blank" class="d-block h-100">
                   <img class="img-fluid img-thumbnail" src="img/photos/5.JPG" alt="">
                 </a>
               </div>
               <div class="col-3 col-md-3">
-                <a href="#" class="d-block h-100">
+                <a href="img/photos/6.JPG" target="_blank" class="d-block h-100">
                   <img class="img-fluid img-thumbnail" src="img/photos/6.JPG" alt="">
                 </a>
               </div>
               <div class="col-3 col-md-3">
-                <a href="#" class="d-block h-100">
+                <a href="img/photos/7.JPG" target="_blank" class="d-block h-100">
                   <img class="img-fluid img-thumbnail" src="img/photos/7.JPG" alt="">
                 </a>
               </div>
               <div class="col-3 col-md-3">
-                <a href="#" class="d-block h-100">
+                <a href="img/photos/8.JPG" target="_blank" class="d-block h-100">
                   <img class="img-fluid img-thumbnail" src="img/photos/8.JPG" alt="">
                 </a>
               </div>
