Del words about schedule in december

--- a/index.html
+++ b/index.html
@@ -764,8 +764,7 @@
         <p>WhatsApp +7 913 185 4331 (Татьяна)</p>
 
         <br />
-        <p>Расписание открытых тренингов на 2019 год мы опубликуем в декабре 2019, <br />
-          по вопросам проведения тренинга в корпоративном формате обращайтесь к организаторам ближайшего к вам региона
+        <p>По вопросам проведения тренинга в корпоративном формате обращайтесь к организаторам ближайшего к вам региона
         </p>
       </div>
     </div>
